--- a/templates/home.html
+++ b/templates/home.html
@@ -1,5 +1,5 @@
 $def with ()
-$var js:
+$var js: ajax.js
 $var css:
 
 <header class="container">
@@ -8,6 +8,6 @@ $var css:
         <p class="lead">Dynamic content with <strong>web.py</strong> on the server-side and <strong>jQuery</strong> on the client-side. Then some <strong>Bootstrap 4</strong> to make it look pretty.</p>
         <hr class="my-4">
         <p>Examples</p>
-        <a class="btn btn-success" href="dropdown">Dropdown</a>
+        <a class="btn btn-success" href="dropdown">Dropdown</a>&nbsp;<a class="btn btn-success" id="a1" href= >Alert</a>
     </div>
 </header>
